# d_parser_ui

./: docker-compose.yml  server.rar
arch_server/: DatabaseManager.h  FileParser.cpp  HttpServer.cpp  conf_file.pro  curl.txt  main.cpp
client/: Dockerfile
client/DataParserApp/: CMakeLists.txt  aboutpage.cpp  authmanager.cpp  authmanager.h  homepage.cpp  homepage.h  login.cpp  login.h  main.cpp  mainpage.cpp  mainpage.h  mainwindow.cpp  mainwindow.h  profile.cpp  profile.h  register.cpp  register.h
db/: DatabaseManager.cpp  DatabaseManager.h  FileParser.cpp  FileParser.h  HttpServer.cpp  HttpServer.h  SessionManager.cpp  SessionManager.h  conf_file.pro  curl.txt  main.cpp
server/: CMakeLists.txt  CMakeUserPresets.json  DatabaseManager.cpp  Dockerfile  FileParser.h  HttpServer.cpp  HttpServer.h  SessionManager.cpp  SessionManager.h  server.cpp  vcpkg.json
server/QtServerApp/: DatabaseManager.cpp  HttpServer.h  vcpkg.json
